--- a/intended_configs/DC1-LEAF1A.cfg
+++ b/intended_configs/DC1-LEAF1A.cfg
@@ -170,15 +170,9 @@ interface Ethernet4
    description MLAG_PEER_DC1-LEAF1B_Ethernet4
    channel-group 3 mode active
 !
-interface Ethernet5
-   description server01_Eth1
-   switchport trunk allowed vlan 110
-   switchport mode trunk
-!
-interface Ethernet6
-   description server02_Eth1
-   switchport trunk allowed vlan 110
-   switchport mode trunk
+interface Ethernet12
+   description server01_Eth0
+   switchport access vlan 110
 !
 interface Loopback0
    description EVPN_Overlay_Peering
