--- a/generated_vars/DC1-LEAF2A.yml
+++ b/generated_vars/DC1-LEAF2A.yml
@@ -266,16 +266,6 @@ port_channel_interfaces:
     trunk_groups:
       - LEAF_PEER_L3
       - MLAG
-  Port-Channel10:
-    description: server01_PortChanne1
-    vlans: 210-211
-    mode: trunk
-    mlag: 10
-  Port-Channel11:
-    description: server02_PortChanne1
-    vlans: 210-211
-    mode: trunk
-    mlag: 11
 
 ### Ethernet Interfaces ###
 ethernet_interfaces:
@@ -300,24 +290,12 @@ ethernet_interfaces:
     channel_group:
       id: 3
       mode: active
-  Ethernet10:
-    host: server01
-    description: server01_Eth2
-    mode: trunk
-    vlans: 210-211
-    channel_group:
-      id: 10
-      mode: "active"
-    profile: TENANT_B
-  Ethernet11:
+  Ethernet12:
     host: server02
-    description: server02_Eth2
-    mode: trunk
-    vlans: 210-211
-    channel_group:
-      id: 11
-      mode: "active"
-    profile: TENANT_B
+    description: server02_Eth0
+    mode: access
+    vlans: 110
+    profile: TENANT_A
 
 
 ### Loopback Interfaces ###
