--- a/group_vars/DC1_SERVERS.yml
+++ b/group_vars/DC1_SERVERS.yml
@@ -5,7 +5,7 @@ port_profiles:
     vlans: "110-111,210-211"
 
   TENANT_A:
-    mode: trunk
+    mode: access
     vlans: "110"
 
   TENANT_B:
@@ -16,63 +16,19 @@ port_profiles:
 servers:
 
   server01:
-    rack: RackB
+    rack: RackA
     adapters:
       - type: nic
-        server_ports: [ Eth1 ]
-        switch_ports: [ Ethernet5 ]
+        server_ports: [ Eth0 ]
+        switch_ports: [ Ethernet12 ]
         switches: [ DC1-LEAF1A ]
         profile: TENANT_A
-      - type: cna
-        server_ports: [ Eth2, Eth3 ]
-        switch_ports: [ Ethernet10, Ethernet10 ]
-        switches: [ DC1-LEAF2A, DC1-LEAF2B ]
-        profile: TENANT_B
-        port_channel:
-          state: present
-          description: PortChanne1
-          mode: active
 
   server02:
     rack: RackB
     adapters:
       - type: nic
-        server_ports: [ Eth1 ]
-        switch_ports: [ Ethernet6 ]
-        switches: [ DC1-LEAF1A ]
+        server_ports: [ Eth0 ]
+        switch_ports: [ Ethernet12 ]
+        switches: [ DC1-LEAF2A ]
         profile: TENANT_A
-      - type: cna
-        server_ports: [ Eth2, Eth3 ]
-        switch_ports: [ Ethernet11, Ethernet11 ]
-        switches: [ DC1-LEAF2A, DC1-LEAF2B ]
-        profile: TENANT_B
-        port_channel:
-          state: present
-          description: PortChanne1
-          mode: active
-
-  server03:
-    rack: RackC
-    adapters:
-      - type: cna
-        server_ports: [ Eth1, Eth2 ]
-        switch_ports: [ Ethernet10, Ethernet10 ]
-        switches: [ DC1-SVC3A, DC1-SVC3B ]
-        profile: TENANT_A_B
-        port_channel:
-          state: present
-          description: PortChanne1
-          mode: active
-
-  server04:
-    rack: RackC
-    adapters:
-      - type: cna
-        server_ports: [ Eth1, Eth2 ]
-        switch_ports: [ Ethernet11, Ethernet11 ]
-        switches: [ DC1-SVC3A, DC1-SVC3B ]
-        profile: TENANT_A_B
-        port_channel:
-          state: present
-          description: PortChanne1
-          mode: active
