--- a/intended_configs/DC1-LEAF2A.cfg
+++ b/intended_configs/DC1-LEAF2A.cfg
@@ -152,18 +152,6 @@ interface Port-Channel3
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
-interface Port-Channel10
-   description server01_PortChanne1
-   switchport trunk allowed vlan 210-211
-   switchport mode trunk
-   mlag 10
-!
-interface Port-Channel11
-   description server02_PortChanne1
-   switchport trunk allowed vlan 210-211
-   switchport mode trunk
-   mlag 11
-!
 interface Ethernet1
    description P2P_LINK_TO_DC1-SPINE1_Ethernet3
    no switchport
@@ -182,13 +170,9 @@ interface Ethernet4
    description MLAG_PEER_DC1-LEAF2B_Ethernet4
    channel-group 3 mode active
 !
-interface Ethernet10
-   description server01_Eth2
-   channel-group 10 mode active
-!
-interface Ethernet11
-   description server02_Eth2
-   channel-group 11 mode active
+interface Ethernet12
+   description server02_Eth0
+   switchport access vlan 110
 !
 interface Loopback0
    description EVPN_Overlay_Peering
