Implement ZTP configuration playbook

--- a/inventory.yml
+++ b/inventory.yml
@@ -2,6 +2,10 @@ all:
   children:
     CVP:
       hosts:
+        ztp:
+          ansible_host: 10.83.28.164
+          ansible_user: root
+          ansible_password: ansible
         cvp:
           ansible_httpapi_host: 10.83.28.164
           ansible_host: 10.83.28.164
