--- a/dc1-fabric-deploy-cvp.yml
+++ b/dc1-fabric-deploy-cvp.yml
@@ -13,11 +13,17 @@
       import_role:
          name: eos-cli-config-gen
 
+
 - name: Configuration deployment with CVP
-  hosts: CVP
+  hosts: CloudVision
   connection: local
   gather_facts: no
   tasks:
     - name: run CVP provisioning
       import_role:
          name: eos-config-deploy-cvp
+      vars:
+        container_root: 'DC1_FABRIC'
+        configlets_prefix: 'DC1-AVD'
+        device_filter: 'DC1'
+        state: present
