--- a/ansible.cfg
+++ b/ansible.cfg
@@ -13,7 +13,7 @@ jinja2_extensions =  jinja2.ext.loopcontrols,jinja2.ext.do,jinja2.ext.i18n
 stdout_callback = yaml
 # enable the stdout_callback when running ad-hoc commands.
 bin_ansible_callbacks = True
-
+command_warnings=False
 
 [persistent_connection]
 connect_timeout = 120
