--- a/dc1-fabric-deploy-cvp.yml
+++ b/dc1-fabric-deploy-cvp.yml
@@ -3,25 +3,30 @@
   hosts: DC1_FABRIC
   connection: local
   gather_facts: no
+  collections:
+    - arista.avd
+    - arista.cvp
   tasks:
     - name: generate intented variables
       tags: [build]
       import_role:
-         name: eos-l3ls-evpn
+         name: eos_l3ls_evpn
     - name: generate device intended config and documention
       tags: [build]
       import_role:
-         name: eos-cli-config-gen
-
+         name: eos_cli_config_gen
 
 - name: Configuration deployment with CVP
   hosts: CloudVision
   connection: local
   gather_facts: no
+  collections:
+    - arista.avd
+    - arista.cvp
   tasks:
     - name: run CVP provisioning
       import_role:
-         name: eos-config-deploy-cvp
+         name: eos_config_deploy_cvp
       vars:
         container_root: 'DC1_FABRIC'
         configlets_prefix: 'DC1-AVD'
