--- a/dc1-fabric-reset-cvp.yml
+++ b/dc1-fabric-reset-cvp.yml
@@ -1,6 +1,6 @@
 ---
 - name: Clenup CVP in default configuration
-  hosts: CloudVision
+  hosts: cv_server
   connection: local
   gather_facts: no
   collections:
