--- a/intended/configs/DC1-LEAF2A.cfg
+++ b/intended/configs/DC1-LEAF2A.cfg
@@ -34,6 +34,9 @@ vlan 110
 vlan 111
    name Tenant_A_OP_Zone_2
 !
+vlan 112
+   name Tenant_A_OP_Zone_3
+!
 vlan 120
    name Tenant_A_WEB_Zone_1
 !
@@ -198,6 +201,11 @@ interface Vlan111
    vrf Tenant_A_OP_Zone
    ip address virtual 10.1.11.1/24
 !
+interface Vlan112
+   description Tenant_A_OP_Zone_3
+   vrf Tenant_A_OP_Zone
+   ip address virtual 10.1.12.1/24
+!
 interface Vlan120
    description Tenant_A_WEB_Zone_1
    vrf Tenant_A_WEB_Zone
@@ -323,6 +331,7 @@ interface Vxlan1
    vxlan udp-port 4789
    vxlan vlan 110 vni 10110
    vxlan vlan 111 vni 50111
+   vxlan vlan 112 vni 50112
    vxlan vlan 120 vni 10120
    vxlan vlan 121 vni 10121
    vxlan vlan 130 vni 10130
@@ -444,7 +453,7 @@ router bgp 65102
       rd 192.168.255.5:10
       route-target both 10:10
       redistribute learned
-      vlan 110-111
+      vlan 110-112
    !
    vlan-aware-bundle Tenant_A_VMOTION
       rd 192.168.255.5:55160
