--- a/dc1-fabric-reset-cvp.yml
+++ b/dc1-fabric-reset-cvp.yml
@@ -2,14 +2,14 @@
 - name: Clenup CVP in default configuration
   hosts: cv_server
   connection: local
-  gather_facts: no
+  gather_facts: false
   collections:
     - arista.avd
     - arista.cvp
   tasks:
     - name: run CVP provisioning
       import_role:
-         name: eos_config_deploy_cvp
+        name: eos_config_deploy_cvp
       vars:
         container_root: 'DC1_FABRIC'
         configlets_prefix: 'DC1-AVD'
