--- a/group_vars/DC1_FABRIC.yml
+++ b/group_vars/DC1_FABRIC.yml
@@ -1,13 +1,16 @@
 ---
-# L3LS Fabric Values - update these values with caution, some changes could be disruptive.
+# L3LS Fabric Values - update these values with caution,
+# SOME CHANGES COULD BE DISRUPTIVE.
 
 fabric_name: DC1_FABRIC
 
-# Point to Point Network Summary range, assigned as /31 for each uplink interfaces
-# Assign range larger then total [ spines * total potential leafs * 2 ]
+# Point to Point Network Summary range, assigned as /31 for each
+# uplink interfaces
+# Assign range larger then total [spines * total potential leafs * 2]
 underlay_p2p_network_summary: 172.31.255.0/24
 
-# IP address range for evpn loopback for all switches in fabric, assigned as /32s
+# IP address range for evpn loopback for all switches in fabric,
+# assigned as /32s
 # Assign range larger then total spines + total leafs switches
 overlay_loopback_network_summary: 192.168.255.0/24
 
@@ -15,7 +18,8 @@ overlay_loopback_network_summary: 192.168.255.0/24
 # Assign range larger then total leaf switches
 vtep_loopback_network_summary: 192.168.254.0/24
 
-# mlag pair IP assignment - assign blocks - Assign range larger then total spines + total leafs switches
+# mlag pair IP assignment - assign blocks - Assign range larger then
+# total spines + total leafs switches
 mlag_ips:
   leaf_peer_l3: 10.255.251.0/24
   mlag_peer: 10.255.252.0/24
@@ -28,9 +32,9 @@ bgp_peer_groups:
   IPv4_UNDERLAY_PEERS:
     password: "AQQvKeimxJu+uGQ/yYvv9w=="
   EVPN_OVERLAY_PEERS:
-      password: "q+VNViP5i4rVjW1cxFv2wA=="
+    password: "q+VNViP5i4rVjW1cxFv2wA=="
   MLAG_IPv4_UNDERLAY_PEER:
-      password: "vnEaG8gMeQf3d3cN6PktXQ=="
+    password: "vnEaG8gMeQf3d3cN6PktXQ=="
 
 # Spine Switches
 spine:
@@ -52,13 +56,14 @@ spine:
 
 l3leaf:
   defaults:
-    # virtual router mac for VNIs assigned to Leaf switches format: xx:xx:xx:xx:xx:xx
-    virtual_router_mac_address : 00:1c:73:00:dc:01
+    # virtual router mac for VNIs assigned to Leaf switches
+    # format: xx:xx:xx:xx:xx:xx
+    virtual_router_mac_address: 00:1c:73:00:dc:01
     platform: vEOS-LAB
     bgp_as: 65100
-    spines: [ DC1-SPINE1, DC1-SPINE2 ]
-    uplink_to_spine_interfaces: [ Ethernet1, Ethernet2 ]
-    mlag_interfaces: [ Ethernet3, Ethernet4 ]
+    spines: [DC1-SPINE1, DC1-SPINE2]
+    uplink_to_spine_interfaces: [Ethernet1, Ethernet2]
+    mlag_interfaces: [Ethernet3, Ethernet4]
     spanning_tree_priority: 4096
     spanning_tree_mode: mstp
   node_groups:
@@ -68,38 +73,39 @@ l3leaf:
         DC1-LEAF1A:
           id: 1
           mgmt_ip: 10.255.0.13/24
-          spine_interfaces: [ Ethernet1, Ethernet1 ]
+          spine_interfaces: [Ethernet1, Ethernet1]
         DC1-LEAF1B:
           id: 2
           mgmt_ip: 10.255.0.14/24
-          spine_interfaces: [ Ethernet2, Ethernet2 ]
+          spine_interfaces: [Ethernet2, Ethernet2]
     DC1_LEAF2:
       bgp_as: 65102
       nodes:
         DC1-LEAF2A:
           id: 3
           mgmt_ip: 10.255.0.15/24
-          spine_interfaces: [ Ethernet3, Ethernet3 ]
+          spine_interfaces: [Ethernet3, Ethernet3]
         DC1-LEAF2B:
           id: 4
           mgmt_ip: 10.255.0.16/24
-          spine_interfaces: [ Ethernet4, Ethernet4 ]
+          spine_interfaces: [Ethernet4, Ethernet4]
 
 #### Override for vEOS Lab Caveats ####
 
-# Disable update wait-for-convergence and update wait-for-install, which is not supported in vEOS-LAB.
+# Disable update wait-for-convergence and update wait-for-install,
+# which is not supported in vEOS-LAB.
 # Refer to design guide
 
 spine_bgp_defaults:
-#  - update wait-for-convergence
-#  - update wait-install
+  #  - update wait-for-convergence
+  #  - update wait-install
   - no bgp default ipv4-unicast
   - distance bgp 20 200 200
   - graceful-restart restart-time 300
   - graceful-restart
 
 leaf_bgp_defaults:
-#  - update wait-install
+  #  - update wait-install
   - no bgp default ipv4-unicast
   - distance bgp 20 200 200
   - graceful-restart restart-time 300
