--- a/intended/configs/DC1-LEAF1A.cfg
+++ b/intended/configs/DC1-LEAF1A.cfg
@@ -155,6 +155,12 @@ interface Port-Channel3
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
+interface Port-Channel5
+   description DC1_L2LEAF1_Po1
+   switchport trunk allowed vlan 110-112,120-121,130-131
+   switchport mode trunk
+   mlag 5
+!
 interface Ethernet1
    description P2P_LINK_TO_DC1-SPINE1_Ethernet1
    no switchport
@@ -173,9 +179,9 @@ interface Ethernet4
    description MLAG_PEER_DC1-LEAF1B_Ethernet4
    channel-group 3 mode active
 !
-interface Ethernet12
-   description server01_Eth0
-   switchport access vlan 110
+interface Ethernet5
+   description DC1-L2LEAF1A_Ethernet1
+   channel-group 5 mode active
 !
 interface Loopback0
    description EVPN_Overlay_Peering
