--- a/intended/configs/DC1-LEAF2A.cfg
+++ b/intended/configs/DC1-LEAF2A.cfg
@@ -155,6 +155,12 @@ interface Port-Channel3
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
+interface Port-Channel5
+   description DC1_L2LEAF2_Po1
+   switchport trunk allowed vlan 110-112,120-121,130-131
+   switchport mode trunk
+   mlag 5
+!
 interface Ethernet1
    description P2P_LINK_TO_DC1-SPINE1_Ethernet3
    no switchport
@@ -172,6 +178,10 @@ interface Ethernet3
 interface Ethernet4
    description MLAG_PEER_DC1-LEAF2B_Ethernet4
    channel-group 3 mode active
+!
+interface Ethernet5
+   description DC1-L2LEAF2A_Ethernet1
+   channel-group 5 mode active
 !
 interface Loopback0
    description EVPN_Overlay_Peering
