--- a/group_vars/DC1_FABRIC.yml
+++ b/group_vars/DC1_FABRIC.yml
@@ -90,6 +90,37 @@ l3leaf:
           mgmt_ip: 10.255.0.16/24
           spine_interfaces: [Ethernet4, Ethernet4]
 
+
+l2leaf:
+  defaults:
+    platform: vEOS-LAB
+    parent_l3leafs: [ DC1-LEAF1A, DC1-LEAF1B ]
+    uplink_interfaces: [ Ethernet1, Ethernet2 ]
+    mlag_interfaces: [ Ethernet3, Ethernet4 ]
+    spanning_tree_mode: mstp
+    spanning_tree_priority: 16384
+  node_groups:
+    DC1_L2LEAF1:
+      parent_l3leafs: [ DC1-LEAF1A, DC1-LEAF1B ]
+      filter:
+        tenants: [ Tenant_A ]
+        tags: [ opzone, web, app ]
+      nodes:
+        DC1-L2LEAF1A:
+          id: 5
+          mgmt_ip: 10.255.0.17/24
+          l3leaf_interfaces: [ Ethernet5, Ethernet5 ]
+    DC1_L2LEAF2:
+      parent_l3leafs: [ DC1-LEAF2A, DC1-LEAF2B ]
+      filter:
+        tenants: [ Tenant_A ]
+        tags: [ opzone, web, app ]
+      nodes:
+        DC1-L2LEAF2A:
+          id: 7
+          mgmt_ip: 10.255.0.18/24
+          l3leaf_interfaces: [ Ethernet5, Ethernet5 ]
+
 #### Override for vEOS Lab Caveats ####
 
 # Disable update wait-for-convergence and update wait-for-install,
