--- a/intended/configs/DC1-LEAF2B.cfg
+++ b/intended/configs/DC1-LEAF2B.cfg
@@ -155,6 +155,12 @@ interface Port-Channel3
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
+interface Port-Channel5
+   description DC1_L2LEAF2_Po1
+   switchport trunk allowed vlan 110-112,120-121,130-131
+   switchport mode trunk
+   mlag 5
+!
 interface Ethernet1
    description P2P_LINK_TO_DC1-SPINE1_Ethernet4
    no switchport
@@ -173,9 +179,9 @@ interface Ethernet4
    description MLAG_PEER_DC1-LEAF2A_Ethernet4
    channel-group 3 mode active
 !
-interface Ethernet12
-   description server02_Eth0
-   switchport access vlan 110
+interface Ethernet5
+   description DC1-L2LEAF2A_Ethernet2
+   channel-group 5 mode active
 !
 interface Loopback0
    description EVPN_Overlay_Peering
