--- a/intended/structured_configs/DC1-LEAF2A.yml
+++ b/intended/structured_configs/DC1-LEAF2A.yml
@@ -262,6 +262,12 @@ bfd_multihop:
 
 ### Port-Channel Interfaces ###
 port_channel_interfaces:
+## L2 LEAF Uplink DC1_L2LEAF2 ##
+  Port-Channel5:
+    description: DC1_L2LEAF2_Po1
+    vlans: 110-112,120-121,130-131
+    mode: trunk
+    mlag: 5
 ## mlag peer-link ##
   Port-Channel3:
     description: MLAG_PEER_DC1-LEAF2B_Po3
@@ -305,6 +311,15 @@ ethernet_interfaces:
     description: MLAG_PEER_DC1-LEAF2B_Ethernet4
     channel_group:
       id: 3
+      mode: active
+## L2 LEAF link DC1_L2LEAF2 ##
+  Ethernet5:
+    peer: DC1-L2LEAF2A
+    peer_interface: Ethernet1
+    peer_type: l2leaf
+    description: DC1-L2LEAF2A_Ethernet1
+    channel_group:
+      id: 5
       mode: active
 
 
