--- a/intended/structured_configs/cv_server.yml
+++ b/intended/structured_configs/cv_server.yml
@@ -12,6 +12,18 @@ CVP_DEVICES:
     configlets:
         - DC1-AVD_DC1-SPINE2
     imageBundle: []
+  DC1-L2LEAF1A:
+    name: DC1-L2LEAF1A
+    parentContainerName: DC1_L2LEAF1
+    configlets:
+        - DC1-AVD_DC1-L2LEAF1A
+    imageBundle: []
+  DC1-L2LEAF2A:
+    name: DC1-L2LEAF2A
+    parentContainerName: DC1_L2LEAF2
+    configlets:
+        - DC1-AVD_DC1-L2LEAF2A
+    imageBundle: []
   DC1-LEAF1A:
     name: DC1-LEAF1A
     parentContainerName: DC1_LEAF1
@@ -39,6 +51,12 @@ CVP_DEVICES:
 CVP_CONTAINERS:
   DC1_FABRIC:
     parent_container: Tenant
+  DC1_L2LEAFS:
+    parent_container: DC1_FABRIC
+  DC1_L2LEAF1:
+    parent_container: DC1_L2LEAFS
+  DC1_L2LEAF2:
+    parent_container: DC1_L2LEAFS
   DC1_L3LEAFS:
     parent_container: DC1_FABRIC
   DC1_LEAF1:
