--- a/.github/workflows/execution.yml
+++ b/.github/workflows/execution.yml
@@ -15,9 +15,15 @@ jobs:
           ansible-playbook dc1-fabric-deploy-cvp.yml --syntax-check
           ansible-playbook dc1-fabric-reset-cvp.yml --syntax-check
           ansible-playbook dc1-ztp-configuration.yml --syntax-check
-      - name: 'Run a generate playbook to test variables'
+      - name: 'Run a generate playbook to test AVD variables'
         run: |
           ansible-playbook dc1-fabric-deploy-cvp.yml --tags generate
+      - name: 'Build AVD & CVP content'
+        run: |
+          ansible-playbook dc1-fabric-deploy-cvp.yml --tags build
+      - name: 'Save Python libs version'
+        run: |
+          pip freeze > intended/pip-version.txt
       - name: 'Remove collections'
         run: make uninstall
       - uses: actions/upload-artifact@v1
