--- a/.github/workflows/execution.yml
+++ b/.github/workflows/execution.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: 'Install Python dependencies'
-        run: make setup-repository
+        run: make install-requirements
       - name: 'Install collections'
         run: make install
       - name: 'Check ansible syntax'
