--- a/dc1-fabric-deploy-cvp.yml
+++ b/dc1-fabric-deploy-cvp.yml
@@ -7,6 +7,17 @@
     - arista.avd
     - arista.cvp
   tasks:
+    - name: 'reset local folders for output'
+      tags: [build]
+      import_role:
+        name: arista.avd.build_output_folders
+    - name: 'create cvp structure config folder: {{documentation_dir_name}}'
+      tags: [build, generate]
+      file:
+        path: '{{playbook_dir}}/intended/structured_configs/cvp/'
+        state: directory
+        mode: 0755
+      delegate_to: localhost
     - name: generate intended variables
       tags: [build, generate]
       import_role:
