Fix YAML Lint and pb tag

--- a/dc1-fabric-deploy-cvp.yml
+++ b/dc1-fabric-deploy-cvp.yml
@@ -8,7 +8,7 @@
     - arista.cvp
   tasks:
     - name: 'reset local folders for output'
-      tags: [build]
+      tags: [build, generate]
       import_role:
         name: arista.avd.build_output_folders
     - name: 'create cvp structure config folder: {{documentation_dir_name}}'
