adjust gateway for mgmt

--- a/intended/configs/DC1-SPINE1.cfg
+++ b/intended/configs/DC1-SPINE1.cfg
@@ -15,8 +15,7 @@ ip name-server vrf MGMT 192.168.2.1
 ip name-server vrf MGMT 8.8.8.8
 !
 ntp local-interface vrf MGMT Management1
-ntp server vrf MGMT 0.fr.pool.ntp.org prefer
-ntp server vrf MGMT 1.fr.pool.ntp.org
+ntp server vrf MGMT 10.255.0.3 prefer
 !
 spanning-tree mode none
 !
@@ -59,7 +58,7 @@ interface Management1
    vrf MGMT
    ip address 10.255.0.11/24
 !
-ip route vrf MGMT 0.0.0.0/0 10.255.0.1
+ip route vrf MGMT 0.0.0.0/0 10.255.0.3
 !
 ip routing
 no ip routing vrf MGMT
