--- a/intended/configs/DC1-LEAF1A.cfg
+++ b/intended/configs/DC1-LEAF1A.cfg
@@ -15,8 +15,7 @@ ip name-server vrf MGMT 192.168.2.1
 ip name-server vrf MGMT 8.8.8.8
 !
 ntp local-interface vrf MGMT Management1
-ntp server vrf MGMT 0.fr.pool.ntp.org prefer
-ntp server vrf MGMT 1.fr.pool.ntp.org
+ntp server vrf MGMT 10.255.0.3 prefer
 !
 spanning-tree mode mstp
 no spanning-tree vlan-id 4094
@@ -370,7 +369,7 @@ interface Vxlan1
 ip virtual-router mac-address 00:1c:73:00:dc:01
 ip address virtual source-nat vrf Tenant_A_OP_Zone address 10.255.1.3
 !
-ip route vrf MGMT 0.0.0.0/0 10.255.0.1
+ip route vrf MGMT 0.0.0.0/0 10.255.0.3
 !
 ip routing
 no ip routing vrf MGMT
