--- a/intended/configs/DC1-LEAF2A.cfg
+++ b/intended/configs/DC1-LEAF2A.cfg
@@ -15,7 +15,8 @@ ip name-server vrf MGMT 192.168.2.1
 ip name-server vrf MGMT 8.8.8.8
 !
 ntp local-interface vrf MGMT Management1
-ntp server vrf MGMT 10.255.0.3 prefer
+ntp server vrf MGMT 0.fr.pool.ntp.org prefer
+ntp server vrf MGMT 1.fr.pool.ntp.org
 !
 spanning-tree mode mstp
 no spanning-tree vlan-id 4094
