--- a/post_validation/tests/avd_cvp_demo/data/current_state/cpu_and_more.yml
+++ b/post_validation/tests/avd_cvp_demo/data/current_state/cpu_and_more.yml
@@ -1,42 +1,24 @@
-DC1-BL1A:
-  cpuInfo:
-    idle: 91.3
-DC1-BL1B:
-  cpuInfo:
-    idle: 90.2
 DC1-L2LEAF1A:
   cpuInfo:
-    idle: 95.6
+    idle: 75.1
 DC1-L2LEAF2A:
   cpuInfo:
-    idle: 94.3
-DC1-L2LEAF2B:
-  cpuInfo:
-    idle: 94.5
+    idle: 75.0
 DC1-LEAF1A:
   cpuInfo:
-    idle: 94.8
+    idle: 71.9
+DC1-LEAF1B:
+  cpuInfo:
+    idle: 72.2
 DC1-LEAF2A:
   cpuInfo:
-    idle: 89.8
+    idle: 72.1
 DC1-LEAF2B:
   cpuInfo:
-    idle: 91.8
+    idle: 71.8
 DC1-SPINE1:
   cpuInfo:
-    idle: 93.2
+    idle: 72.6
 DC1-SPINE2:
   cpuInfo:
-    idle: 94.3
-DC1-SPINE3:
-  cpuInfo:
-    idle: 94.3
-DC1-SPINE4:
-  cpuInfo:
-    idle: 94.3
-DC1-SVC3A:
-  cpuInfo:
-    idle: 89.5
-DC1-SVC3B:
-  cpuInfo:
-    idle: 92.1
+    idle: 72.7
