--- a/post_validation/tests/avd_cvp_demo/data/intended/mlag.yml
+++ b/post_validation/tests/avd_cvp_demo/data/intended/mlag.yml
@@ -2,6 +2,8 @@ DC1-LEAF1A:
   configSanity: consistent
   detail:
     mlagPorts:
+      Active-partial: 0
+      Disabled: 0
       Inactive: 0
     negStatus: connected
     peerLinkStatus: up
@@ -11,6 +13,8 @@ DC1-LEAF1B:
   configSanity: consistent
   detail:
     mlagPorts:
+      Active-partial: 0
+      Disabled: 0
       Inactive: 0
     negStatus: connected
     peerLinkStatus: up
@@ -20,6 +24,8 @@ DC1-LEAF2A:
   configSanity: consistent
   detail:
     mlagPorts:
+      Active-partial: 0
+      Disabled: 0
       Inactive: 0
     negStatus: connected
     peerLinkStatus: up
@@ -29,6 +35,8 @@ DC1-LEAF2B:
   configSanity: consistent
   detail:
     mlagPorts:
+      Active-partial: 0
+      Disabled: 0
       Inactive: 0
     negStatus: connected
     peerLinkStatus: up
