Change ZTP role name

--- a/dc1-ztp-configuration.yml
+++ b/dc1-ztp-configuration.yml
@@ -5,4 +5,4 @@
   tasks:
   - name: 'Execute ZTP configuration role'
     import_role:
-      name: arista.cvp.ztp_configuration
+      name: arista.cvp.dhcp_configuration
