Update demo workflow with docker as default

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 host_key_checking = False
-inventory =./inventory.yml
+inventory =./inventory/inventory.yml
 gathering = explicit
 retry_files_enabled = False
 filter_plugins = ansible-avd/plugins/filters
