Update Artifact path

--- a/.github/workflows/code-execution.yml
+++ b/.github/workflows/code-execution.yml
@@ -23,10 +23,10 @@ jobs:
       - name: 'Save Python libs version'
         run: |
           pip3 freeze
-          pip3 freeze > intended/pip-version.txt
+          pip3 freeze > inventory/intended/pip-version.txt
       - name: 'Remove collections'
         run: make uninstall
       - uses: actions/upload-artifact@v1
         with:
           name: intended-files
-          path: intended/
+          path: inventory/
